@@ -132,6 +132,7 @@
 #define IDC_MENU23                      1063
 #define IDC_INPUTTEXT                   1064
 #define IDC_HINTTEXT                    1065
+#define IDC_AUTOCLOSE                   1066
 #define IDS_AUTH_USERNAME               1100
 #define IDS_AUTH_PASSWORD               1101
 #define IDS_MSGBOX_ABORT                1154
@@ -206,6 +207,7 @@
 #define IDS_SETTINGS_EXTMERGE_TT        1250
 #define IDS_SETTINGS_PROXYSERVER_TT     1251
 #define IDS_SETTINGS_DIFFVIEWER_TT      1252
+#define IDS_SETTINGS_AUTOCLOSE_TT       1253
 #define IDS_PROC_WARNREVERT             1256
 #define IDS_PROC_CLEANUPFINISHED        1257
 #define IDS_PROC_REPOCREATEERR          1258
@@ -286,7 +288,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        162
 #define _APS_NEXT_COMMAND_VALUE         32771
-#define _APS_NEXT_CONTROL_VALUE         1066
+#define _APS_NEXT_CONTROL_VALUE         1067
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
