@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,19,0,204
-#define PRODUCTVER_INCVERSION     0,19,0,204
-#define STRFILEVER_INCVERSION     "0, 19, 0, 204\0"
-#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 204\0"
+#define FILEVER_INCVERSION        0,19,0,207
+#define PRODUCTVER_INCVERSION     0,19,0,207
+#define STRFILEVER_INCVERSION     "0, 19, 0, 207\0"
+#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 207\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             19
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  204
+#define TSVN_VERBUILD_INCVERSION  207
 
