@@ -19,7 +19,10 @@
        operation you can now just doubleclick on
        the conflicted entry to start the external
        merge program. (Stefan)
-
+- ADD: New option to close the progress window
+       automatically after the command is
+       finished. (Stefan)
+       
 Version 0.19
 - BUG: The conflicted files weren't always determined
        correctly. (Stefan)
